<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Win8遥控器</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_help">帮助</string>
    <string name="menu_exit">退出</string>
    <string name="metro_gesture">Metro模式</string>
    <string name="general_gesture">通用模式</string>
    <string name="voice_search">语音搜索</string>
    <string name="metro_gesture_mode">当前模式：Metro+手势</string>
    <string name="metro_pointer_mode">当前模式：Metro+指针</string>
    <string name="general_mode">当前模式：通用</string>
    <string name="gesture_ctl">手势控制</string>
    <string name="pointer_ctl">指针控制</string>
    <string name="help_contents">
Win8遥控器v1.0\n作者：杨叶新\n更新日期：2013年2月5日\n
\n
1. 应用的启动\n
启动应用之前，请首先打开WiFi，否则您将看到应用显示“WiFi未开启”并自动退出。\n\n

随后应用将会在本地局域网内查找一台开启了本应用配套PC代理的Win8电脑，并自动与之建立连接（应用与代理的启动顺序可任意）。\n\n

查找电脑过程中，您可以随时按Back键取消查找过程并退出应用。\n\n

应用成功连接位于电脑端的代理后，您即可开始操作。\n\n

2. 通用模式\n
此时您处于通用模式，此模式既适用于Metro界面也适用于传统桌面。\n\n

您可以在屏幕中输入手势，并启动相应的Windows程序。目前应用支持的手势有：\n
s：代表start，即进入开始屏幕；\n
e：代表settings，即进入设置屏幕；\n
m：代表system，即进入系统界面；\n
v：代表desktop，即最小化所有窗口、显示桌面；\n
c：代表control panel，即进入控制面板。\n\n

当您进入开始屏幕或设置屏幕后，应用将自动切换到Metro模式，此模式的操作方式将在后文详述。\n\n

除此之外，通用模式还支持语音搜索功能（需要安装Google Voice）。
您可以点击屏幕右下角的“语音搜索”按钮进入语音输入界面。
当您讲话完毕，应用将自动列出一系列可能的匹配短语，您可以从中点选一条您认为最匹配的短语。
随后电脑端代理将会启动Win8的应用搜索界面并自动搜索您选择的短语，同时应用自动切换到Metro模式。\n\n

最后您也可以在通用模式中，点击屏幕左下角的“Metro模式”按钮手动切换至Metro模式。\n\n

3. Metro模式\n
Metro模式支持两种控制方式：手势控制与指针控制。若您想切换回通用模式，可以点击屏幕右下角的“通用模式”按钮。另外Metro模式也支持语音搜索功能。\n\n

3.1 手势控制\n
这是默认的控制方式，您可以通过点击屏幕右下角的“指针控制”切换至指针控制方式。\n\n

在手势控制方式下，您需要做的手势只有“滑动”（fling）。应用目前支持以下的滑动手势：\n
(1). 在屏幕中间上滑、下滑、左滑、右滑，效果等价于按键盘上的四个方向键，可用于在Metro界面中移动选框；\n
(2). 从屏幕的左边缘滑入（左至右），屏幕左侧将出现应用切换列表，此时您可以在屏幕中间上滑或下滑来选择要切换的应用或者桌面，并轻叩屏幕中间选定；\n
(3). 从屏幕的右边缘滑入（右至左），屏幕右侧将出现Win8 Charms菜单，此时您可以在屏幕中间上滑或下滑来选择要进入的功能，并轻叩屏幕中间选定；\n
(4). 从屏幕的下边缘滑入（上至下），屏幕下方将出现“所有应用”底栏，此时您可以轻叩屏幕以进入“所有应用”界面；\n
(5). 从屏幕的下边缘滑出（下至上），相当于按下“ESC”键；\n
(6). 从屏幕的上边缘滑入（上至下），即可关闭当前Metro应用。\n\n

最后您可以长按屏幕，将会有一下短促的震动，并显示选框所在应用的上下文菜单。\n\n

3.2 指针控制\n
当您需要操作Metro应用时，切换至指针控制方式能提供更多方便。若您想切换回手势控制方式，可以点击屏幕右下角的“手势控制”按钮。\n\n

在指针控制方式下：\n
(1). 在屏幕上的移动会被映射为电脑屏幕上指针的移动（像素比1：1）；\n
(2). 轻叩屏幕相当于在指针所在位置单击；\n
(3). 长按屏幕，同样会有一下短促的震动，相当于在指针所在位置右击。\n\n

4. 操作提示\n
当电脑从Metro界面回到传统桌面时，应用是无法检测到的，因此不会主动切换回通用模式。
此时您仍位于Metro模式下，一切该模式下操作仍然是允许的。\n\n

但我们强烈建议您不要在Metro模式下操作传统桌面应用，
因为那些操作都是专门针对Metro界面与应用设计的，在传统桌面下操作可能会带来意外的结果。\n\n

感谢您的支持！
    </string>

</resources>