<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".MainActivity" >

    <android.gesture.GestureOverlayView
        android:id="@+id/gesture_general"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/darkslateblue" >

    </android.gesture.GestureOverlayView>

    <Button
        android:id="@+id/btn_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/metro_gesture" />

    <Button
        android:id="@+id/btn_voice_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/voice_search" />
    
    <Button
        android:id="@+id/btn_ctl_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/btn_mode_switch"
        android:text="@string/pointer_ctl" />
    
    <TextView
        android:id="@+id/txt_agent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_world"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/general_mode"
        android:textColor="@color/white" />
    

</RelativeLayout>